--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,14 @@
       </section>
       <div class="container mt-5">
         <form action="https://formsubmit.co/e4a9e5c4158901b9582946328f0a811f" method="POST">
+            <!-- Honeypot -->
+          <input type="text" name="_honey" style="display:none;">
+
+          <!-- Disable Captcha -->
+          <input type="hidden" name="_captcha" value="false">
+
+          <input type="hidden" name="_next" value="https://adarsh-1704.github.io/formSubmitDemo/success.html">
+
           <div class="form-floating mb-3">
             <i class="icon fa-solid fa-user-tie fa-lg"></i>
             <input
