--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>FLP</title>
     <link rel="stylesheet" href="./style.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
     />
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css"
-    integrity="sha384-X8QTME3FCg1DLb58++lPvsjbQoCT9bp3MsUU3grbIny/3ZwUJkRNO8NPW6zqzuW9"
-    crossorigin="anonymous"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css"
+      integrity="sha384-X8QTME3FCg1DLb58++lPvsjbQoCT9bp3MsUU3grbIny/3ZwUJkRNO8NPW6zqzuW9"
+      crossorigin="anonymous"
     />
     <script
       src="https://kit.fontawesome.com/022b6dc220.js"
@@ -58,21 +58,30 @@
     </nav>
 
     <!-- ------------------banner----------------- -->
-    <main>
-      <section id="banner">
-        <div class="container-promo mt-5">
-          <div class="row text-center">
-            <p class="promo-title">
-              Forever Business Owner |<br />Gyaneshwar Prasad Singh
+
+    <section class="container mt-5" id="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <p>
+              <a href="tel:+91-7979727291">+91-7979727291</a> |
+              <a href="mailto: gpsdvc2@gmail.com">gpsdvc2@gmail.com</a>
             </p>
+            <h2 class="promo-title">
+              Independent Forever Business Owner |<br />
+              G P Singh
+            </h2>
             <p class="promo-title-des">
-              Distributor Forever Living Products<br />Feel better, look good
-              with Aloe Vera
+              Distributor Forever Living Products<br />
+              Look good, feel better with Aloe Vera
             </p>
           </div>
+          <div class="col-md-6">
+            <img src="./image/products.png" class="img-fluid" />
+          </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
 
     <!-------------------- -------------------->
 
