--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </p>
           </div>
           <div class="col-md-6">
-            <img src="./image/products.png" class="img-fluid" />
+            <img src="./products.png" class="img-fluid" />
           </div>
         </div>
       </div>
