--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
-            <li class="nav-item">
+<!--             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
