--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         </div>
       </section>
       <div class="container mt-5">
-        <form action="https://formsubmit.co/e4a9e5c4158901b9582946328f0a811f" method="POST">
+        <form action="https://formsubmit.co/gpsflp67@gmail.com" method="POST">
           <!-- Honeypot -->
           <input type="text" name="_honey" style="display:none;">
 
