--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
           <!-- Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
 
-          <input type="hidden" name="_next" value="https://adarsh-1704.github.io/formSubmitDemo/success.html">
+          <input type="hidden" name="_next" value="https://adarsh-1704.github.io/gpsflp/success.html">
 
           <div class="form-floating mb-3">
             <i class="icon fa-solid fa-user-tie fa-lg"></i>
