--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         </div>
       </section>
       <div class="container mt-5">
-        <form action="https://formsubmit.co/gpsflp67@gmail.com" method="POST">
+        <form action="https://formsubmit.co/802759bfb25a3ea6d867be2912886e9c" method="POST">
           <!-- Honeypot -->
           <input type="text" name="_honey" style="display:none;">
 
